# realsense-ros

realsense2_camera/: CMakeLists.txt
realsense2_camera/launch/includes/: nodelet.launch.xml
realsense2_camera/src/: base_realsense_node.cpp
realsense2_description/: CMakeLists.txt
